# fbterm-mod

./: .gitignore  ChangeLog  Makefile.in  README.md  README_zh.md  config.h.in  configure  configure.ac  fbterm-mod-1.10_2.armv7l.xbps  fbterm-mod-1.15_1.armv7l.xbps
doc/: Makefile.in  fbterm.1  fbterm.1.in
im/: Makefile.in
src/: Makefile.am  Makefile.in  fbconfig.cpp  fbdev.cpp  fbio.cpp  fbshell.cpp  fbshell.h  fbshellman.cpp  fbterm.cpp  font.cpp  font.h  improxy.cpp  input.cpp  input_key.h  rga_adapter.cpp  rga_adapter.h  screen.cpp  screen.h  screen_render.cpp  screen_sixel.cpp
src/lib/: Makefile.am  Makefile.in  shell.cpp  type.h  vterm.cpp  vterm.h  vterm_action.cpp  vterm_sixel.cpp  vterm_states.cpp  wcwidth.cpp
terminfo/: Makefile.in  fbterm
terminfo/f/: fbterm
